--- a/package.json
+++ b/package.json
@@ -19,15 +19,18 @@
   "homepage": "https://github.com/OSW3/wp-theme-boilerplate#readme",
   "devDependencies": {
     "autoprefixer": "^10.4.0",
+    "base64-inline-loader": "^2.0.1",
     "bourbon": "^7.0.0",
+    "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^6.2.0",
+    "cssnano": "^5.0.10",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "image-webpack-loader": "^7.0.1",
     "imagemin": "^8.0.1",
     "mini-css-extract-plugin": "^2.2.0",
-    "postcss": "^8.3.6",
+    "postcss": "^8.3.11",
     "postcss-image-set": "^1.0.0",
     "postcss-loader": "^6.1.1",
     "postcss-nested": "^5.0.6",
@@ -45,6 +48,9 @@
   "dependencies": {
     "@hotwired/turbo": "^7.0.0-rc.3",
     "bootstrap": "^5.1.0",
+    "imagemin-webpack-plugin": "^2.4.2",
+    "node-sass-glob-importer": "^5.3.2",
+    "pixrem": "^5.0.0",
     "remixicon": "^2.5.0",
     "stimulus": "^2.0.0"
   }
